Fixed inline code block spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,8 @@ a { color: inherit; text-decoration: none; }
 #content em { font-style: italic; }
 #content strong { font-weight: bold; }
 
-#content code { font-family: monospace; background: #eee; border: 1px solid #ccc; border-radius: 3px; padding: 4px; }
-#content pre code { line-height: 24px; padding: 10px; display: block; }
+#content code { font-family: monospace; background: #eee; border: 1px solid #ccc; border-radius: 3px; padding: 4px; margin: 0px 4px; }
+#content pre code { line-height: 24px; padding: 10px; margin: 0px; display: block; }
 
 #content ul { list-style-type: disc; }
 #content ol { list-style-type: decimal; }
